--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     
     <!-- MS, fb & Whatsapp -->
     <!-- MS Title - for Microsoft apps-->
-    <meta name="Arkapratim Ghosh - Portfolio-2022" content="https://raw.githubusercontent.com/arkapg211002/arkapg211002.github.io/main/assets/images/logo-yoursite.png">    
+    <meta name="Forcha Pearl - Portfolio-2022" content="https://raw.githubusercontent.com/arkapg211002/arkapg211002.github.io/main/assets/images/logo-yoursite.png">    
     <!-- fb & Whatsapp -->
     <!-- Site Name, Title, and Description to be displayed -->
-    <meta property="og:site_name" content="Arkapratim Ghosh - Portfolio-2022">
-    <meta property="og:title" content="Arkapratim Ghosh">
+    <meta property="og:site_name" content="Forcha Pearl - Portfolio-2022">
+    <meta property="og:title" content="Forcha Pearl">
     <meta property="og:description" content="Welcome! Glad you are here.">
     <!-- Image to display -->
     <!-- Replace   «example.com/image01.jpg» with your own -->
@@ -68,7 +68,7 @@
           class="navbar-brand mx-lg-auto mb-lg-4"
           href="https://www.linkedin.com/in/arkapratim-ghosh21102002/" target="_blank" data-title="Hello!"
         >
-          <span class="h3 fw-bold d-block d-lg-none nav-text">Arkapratim Ghosh</span>
+          <span class="h3 fw-bold d-block d-lg-none nav-text">Forcha Pearl</span>
           <img
             src="./assets/images/person.jpg"
             class="d-none d-lg-block rounded-circle" data-aos="zoom-in" data-aos-delay="600"
